// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadgeComponent Component Created 1`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r0-dropdown"
    aria-expanded="false"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-testid="btn-badge"
    id="mantine-r0-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`UserBadgeComponent Component Opened 1`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r1-dropdown"
    aria-expanded="true"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-expanded="true"
    data-testid="btn-badge"
    id="mantine-r1-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    aria-labelledby="mantine-r1-target"
    aria-orientation="vertical"
    class="mantine-Menu-dropdown mantine-17yffg4"
    data-position="bottom"
    id="mantine-r1-dropdown"
    role="menu"
    style="transition-property: opacity; transition-duration: 150ms; transition-timing-function: ease; opacity: 1; z-index: 300; width: 250px; top: 8px; left: 0px;"
    tabindex="-1"
  >
    <div
      data-autofocus="true"
      data-menu-dropdown="true"
      style="outline: 0;"
      tabindex="-1"
    >
      <div
        class="mantine-Text-root mantine-Menu-label mantine-9ns9y8"
      >
        <div
          class="mantine-Badge-root mantine-pe5k9b"
        >
          <span
            class="mantine-h9iq4m mantine-Badge-inner"
          >
            customer8
          </span>
        </div>
      </div>
      <div
        class="mantine-Text-root mantine-Menu-label mantine-9ns9y8"
      >
        email
      </div>
      <div
        class="mantine-Menu-divider mantine-1th64oo"
      />
      <button
        class="mantine-Menu-item mantine-1i918pc"
        data-menu-item="true"
        data-testid="btn-subs"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-ticket"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <line
              x1="15"
              x2="15"
              y1="5"
              y2="7"
            />
            <line
              x1="15"
              x2="15"
              y1="11"
              y2="13"
            />
            <line
              x1="15"
              x2="15"
              y1="17"
              y2="19"
            />
            <path
              d="M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-3a2 2 0 0 0 0 -4v-3a2 2 0 0 1 2 -2"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          My Subscription
        </div>
      </button>
      <button
        class="mantine-Menu-item mantine-1i918pc"
        data-menu-item="true"
        data-testid="btn-orders"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-truck-delivery"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <circle
              cx="7"
              cy="17"
              r="2"
            />
            <circle
              cx="17"
              cy="17"
              r="2"
            />
            <path
              d="M5 17h-2v-4m-1 -8h11v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5"
            />
            <line
              x1="3"
              x2="7"
              y1="9"
              y2="9"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          My Orders
        </div>
      </button>
      <button
        class="mantine-Menu-item mantine-1i918pc"
        data-menu-item="true"
        data-testid="btn-optins"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-rotate-clockwise"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <path
              d="M4.05 11a8 8 0 1 1 .5 4m-.5 5v-5h5"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          My Opt-ins
        </div>
      </button>
      <div
        class="mantine-Menu-divider mantine-1th64oo"
      />
      <button
        class="mantine-UnstyledButton-root mantine-e0gmla"
        data-testid="btn-pwd-reset"
        style="width: 100%;"
        type="button"
      />
      <button
        class="mantine-Menu-item mantine-y414p"
        data-menu-item="true"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-lock"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <rect
              height="10"
              rx="2"
              width="14"
              x="5"
              y="11"
            />
            <circle
              cx="12"
              cy="16"
              r="1"
            />
            <path
              d="M8 11v-4a4 4 0 0 1 8 0v4"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          Reset Password
        </div>
      </button>
      <button
        class="mantine-Menu-item mantine-uj3nyj"
        data-menu-item="true"
        data-testid="btn-logout"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-trash"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <line
              x1="4"
              x2="20"
              y1="7"
              y2="7"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
            <path
              d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
            />
            <path
              d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          Logout
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserBadgeComponent optin clicked  1`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r5-dropdown"
    aria-expanded="false"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-testid="btn-badge"
    id="mantine-r5-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`UserBadgeComponent optin clicked  2`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r5-dropdown"
    aria-expanded="false"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-testid="btn-badge"
    id="mantine-r5-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`UserBadgeComponent orders clicked  1`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r4-dropdown"
    aria-expanded="false"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-testid="btn-badge"
    id="mantine-r4-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`UserBadgeComponent reset clicked  1`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r2-dropdown"
    aria-expanded="true"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-expanded="true"
    data-testid="btn-badge"
    id="mantine-r2-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    aria-labelledby="mantine-r2-target"
    aria-orientation="vertical"
    class="mantine-Menu-dropdown mantine-17yffg4"
    data-position="bottom"
    id="mantine-r2-dropdown"
    role="menu"
    style="transition-property: opacity; transition-duration: 150ms; transition-timing-function: ease; opacity: 1; z-index: 300; width: 250px; top: 8px; left: 0px;"
    tabindex="-1"
  >
    <div
      data-autofocus="true"
      data-menu-dropdown="true"
      style="outline: 0;"
      tabindex="-1"
    >
      <div
        class="mantine-Text-root mantine-Menu-label mantine-9ns9y8"
      >
        <div
          class="mantine-Badge-root mantine-pe5k9b"
        >
          <span
            class="mantine-h9iq4m mantine-Badge-inner"
          >
            customer8
          </span>
        </div>
      </div>
      <div
        class="mantine-Text-root mantine-Menu-label mantine-9ns9y8"
      >
        email
      </div>
      <div
        class="mantine-Menu-divider mantine-1th64oo"
      />
      <button
        class="mantine-Menu-item mantine-1i918pc"
        data-menu-item="true"
        data-testid="btn-subs"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-ticket"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <line
              x1="15"
              x2="15"
              y1="5"
              y2="7"
            />
            <line
              x1="15"
              x2="15"
              y1="11"
              y2="13"
            />
            <line
              x1="15"
              x2="15"
              y1="17"
              y2="19"
            />
            <path
              d="M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-3a2 2 0 0 0 0 -4v-3a2 2 0 0 1 2 -2"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          My Subscription
        </div>
      </button>
      <button
        class="mantine-Menu-item mantine-1i918pc"
        data-menu-item="true"
        data-testid="btn-orders"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-truck-delivery"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <circle
              cx="7"
              cy="17"
              r="2"
            />
            <circle
              cx="17"
              cy="17"
              r="2"
            />
            <path
              d="M5 17h-2v-4m-1 -8h11v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5"
            />
            <line
              x1="3"
              x2="7"
              y1="9"
              y2="9"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          My Orders
        </div>
      </button>
      <button
        class="mantine-Menu-item mantine-1i918pc"
        data-menu-item="true"
        data-testid="btn-optins"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-rotate-clockwise"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <path
              d="M4.05 11a8 8 0 1 1 .5 4m-.5 5v-5h5"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          My Opt-ins
        </div>
      </button>
      <div
        class="mantine-Menu-divider mantine-1th64oo"
      />
      <button
        class="mantine-UnstyledButton-root mantine-e0gmla"
        data-testid="btn-pwd-reset"
        style="width: 100%;"
        type="button"
      />
      <button
        class="mantine-Menu-item mantine-y414p"
        data-menu-item="true"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-lock"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <rect
              height="10"
              rx="2"
              width="14"
              x="5"
              y="11"
            />
            <circle
              cx="12"
              cy="16"
              r="1"
            />
            <path
              d="M8 11v-4a4 4 0 0 1 8 0v4"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          Reset Password
        </div>
      </button>
      <button
        class="mantine-Menu-item mantine-uj3nyj"
        data-menu-item="true"
        data-testid="btn-logout"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="mantine-koq93b mantine-Menu-itemIcon"
        >
          <svg
            class="icon icon-tabler icon-tabler-trash"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
              stroke="none"
            />
            <line
              x1="4"
              x2="20"
              y1="7"
              y2="7"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
            <path
              d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
            />
            <path
              d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
            />
          </svg>
        </div>
        <div
          class="mantine-1eawhj0 mantine-Menu-itemLabel"
        >
          Logout
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserBadgeComponent subscription clicked  1`] = `
<DocumentFragment>
  <button
    aria-controls="mantine-r3-dropdown"
    aria-expanded="false"
    aria-haspopup="menu"
    class="mantine-UnstyledButton-root mantine-1ysirc4"
    data-testid="btn-badge"
    id="mantine-r3-target"
    type="button"
  >
    <div
      class="mantine-Avatar-root mantine-1tqi9xs"
    >
      <div
        class="mantine-ttafi4 mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1vmgx88 mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</DocumentFragment>
`;
